@@ -1091,6 +1091,8 @@ Release 2.7.0 - UNRELEASED
     HDFS-7879. hdfs.dll does not export functions of the public libhdfs API.
     (Chris Nauroth via wheat9)
 
+    HDFS-7434. DatanodeID hashCode should not be mutable. (daryn via kihwal)
+
     BREAKDOWN OF HDFS-7584 SUBTASKS AND RELATED JIRAS
 
       HDFS-7720. Quota by Storage Type API, tools and ClientNameNode
